--- a/imgcss/patent_view.css
+++ b/imgcss/patent_view.css
@@ -278,7 +278,7 @@ body {overflow: hidden;}
 		.patentimg {max-width:120px; max-height:180px; /*border:1px solid #DDDDDD; width:120px;*/ }
 
 		.patent-info  {}
-		.patent-info th, .patent-info td {  border-bottom: 1px solid #d2d2d2; }
+		.patent-info tr{  border-bottom: 1px solid #d2d2d2; }
 		.patent-info td * {line-height:1.5em;}
 		.patent-info th  {width:125px; padding:3px; font-weight: normal; text-align: left; font-size: 12px; color:#555;}
 		.patent-info td  {padding:3px;  word-wrap:break-word; }
