--- a/imgcss/pnview.css
+++ b/imgcss/pnview.css
@@ -6,17 +6,38 @@
     position: absolute;top:0;bottom: 0;left: 0;right: 0;
     background: #f5f5f5;
 }
+.pnview-header{
+    padding: 5px 0;
+    border-color: #75bb00;
+}
 .pnview-master-container .tab-content{
     position: absolute;
-    top: 36px;bottom: 0;left: 0;right: 0;
+    top: 46px;bottom: 0;left: 0;right: 0;
 }
 .main-aside{
     height: 100%;width: 120px;float: left;
-    background:#f5f5f5 url('./bg_side.gif') repeat-y right;
+    background:#f5f5f5 url('./fromold/bg_side.gif') repeat-y right;
 }
 .main-section{
     background: #FFF;
     margin: 0 0 0 120px;
     height: 100%;
     overflow: auto;
+    padding: 3% 3% 50px;
+}
+
+.tab-mode{
+    position: absolute;
+    left: 120px;right:200px;
+    bottom: 0;
+    white-space: nowrap;
+
+}
+.tab-mode a.selected{cursor: default;}
+.tab-mode a{
+    margin-right: 1%;
+    min-width: 5em;
+    max-width: 6em;
+    text-align: center;
+    user-select: none;
 }
